Memperbaiki Navbar yang lebih responsive

--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+@media (max-width: 991.98px) {
+  .navbar-brand {
+    text-align: center;
+    width: 100%;
+  }
+
+  .navbar-brand span {
+    display: block;
+  }
+
+  .navbar-brand .mb-md-0 {
+    margin-bottom: 0;
+  }
+
+  .navbar-brand .ms-md-2 {
+    margin-left: 2px;
+  }
+}
+
 .jumbotron {
   background-image: url(gambar/jumbotron2.png);
   padding-top: 6rem;
