Memperbaiki navbar toggle

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
     margin-bottom: 0;
   }
 
-  .navbar-brand .ms-md-2 {
-    margin-left: 2px;
+  .navbar-brand .me-md-2 {
+    margin-right: 2px;
   }
 }
 
